v2.10.1/_sources/plugins/assurance_device_health_score_settings_workflow_manager_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager module -- Resource module for managing assurance Health score settings in Cisco Catalyst Center.
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.10.1).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.31.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manages assurance Health score settings in Cisco Catalyst Center.
- It supports updating configurations for Health score settings functionalities.
- This module interacts with Cisco Catalyst Center's Assurance settings to configure thresholds, rules, KPIs, and more for health score monitoring.
- The health score can be customized based on device type.
- The network device's health score is determined by the lowest score among all included KPIs.
- To disable a KPI from impacting the overall device health, you can exclude it from the health score calculation.
- Health score setting is not applicable for Third Party Devices.


.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.6.0.2
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_task_timeout"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_api_task_timeout"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_api_task_timeout:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_api_task_timeout:

      .. rst-class:: ansible-option-title

      **catalystcenter_api_task_timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_api_task_timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_api_task_timeout`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Defines the timeout in seconds for API calls to retrieve task details. If the task details are not received within this period, the process will end, and a timeout notification will be logged.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`1200`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Indicates whether debugging is enabled in the Cisco Catalyst Center SDK.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The hostname of the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_log:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_log:

      .. rst-class:: ansible-option-title

      **catalystcenter_log**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable/disable playbook execution logging.

      When true and catalystcenter\_log\_file\_path is provided, - Create the log file at the execution location with the specified name.

      When true and catalystcenter\_log\_file\_path is not provided, - Create the log file at the execution location with the name 'catalystcenter.log'.

      When false, - Logging is disabled.

      If the log file doesn't exist, - It is created in append or write mode based on the "catalystcenter\_log\_append" flag.

      If the log file exists, - It is overwritten or appended based on the "catalystcenter\_log\_append" flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_append"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_append"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_log_append:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_log_append:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_append**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_append" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_append`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Determines the mode of the file. Set to True for 'append' mode. Set to False for 'write' mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_file_path"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_file_path"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_log_file_path:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_log_file_path:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_file_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_file_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_file_path`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Governs logging. Logs are recorded if catalystcenter\_log is True.

      If path is not specified, - When 'catalystcenter\_log\_append' is True, 'catalystcenter.log' is generated in the current Ansible directory; logs are appended. - When 'catalystcenter\_log\_append' is False, 'catalystcenter.log' is generated; logs are overwritten.

      If path is specified, - When 'catalystcenter\_log\_append' is True, the file opens in append mode. - When 'catalystcenter\_log\_append' is False, the file opens in write (w) mode. - In shared file scenarios, without append mode, content is overwritten after each module execution. - For a shared log file, set append to False for the 1st module (to overwrite); for subsequent modules, set append to True.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"catalystcenter.log"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_level"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_level"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_log_level:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_log_level:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_level**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_level" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_level`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sets the threshold for log level. Messages with a level equal to or higher than this will be logged. Levels are listed in order of severity [CRITICAL, ERROR, WARNING, INFO, DEBUG].

      CRITICAL indicates serious errors halting the program. Displays only CRITICAL messages.

      ERROR indicates problems preventing a function. Displays ERROR and CRITICAL messages.

      WARNING indicates potential future issues. Displays WARNING, ERROR, CRITICAL messages.

      INFO tracks normal operation. Displays INFO, WARNING, ERROR, CRITICAL messages.

      DEBUG provides detailed diagnostic info. Displays all log messages.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"WARNING"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The password for authentication at the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the port number associated with the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"443"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_task_poll_interval"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_task_poll_interval"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_task_poll_interval:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_task_poll_interval:

      .. rst-class:: ansible-option-title

      **catalystcenter_task_poll_interval**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_task_poll_interval" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_task_poll_interval`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the interval in seconds between successive calls to the API to retrieve task details.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`2`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The username for authentication at the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the version of the Cisco Catalyst Center that the SDK should use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config:

      .. rst-class:: ansible-option-title

      **config**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A list of settings and parameters for managing network issues in Cisco Catalyst Center, including synchronization with health thresholds, priority, KPI enablement, and threshold values.
          


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score:

      .. rst-class:: ansible-option-title

      **device_health_score**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Configures the health score settings for network devices. Defines thresholds for KPIs like CPU UTILIZATION, MEMORY UTILIZATION, etc.
          


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score/device_family"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score/device_family:

      .. rst-class:: ansible-option-title

      **device_family**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score/device_family" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the device family to which the health score applies.
            required:
          true
            choices:
              - ROUTER
              - SWITCH\_AND\_HUB
              - WIRELESS\_CONTROLLER
              - UNIFIED\_AP
              - WIRELESS\_CLIENT
              - WIRED\_CLIENT
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score/include_for_overall_health"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score/include_for_overall_health:

      .. rst-class:: ansible-option-title

      **include_for_overall_health**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score/include_for_overall_health" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Boolean value indicating whether this KPI should be included in the overall health score calculation.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score/kpi_name"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score/kpi_name:

      .. rst-class:: ansible-option-title

      **kpi_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score/kpi_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The name of the Key Performance Indicator (KPI) to be monitored (e.g., LINK ERROR). Must be one of the valid KPI names for the specified device family. choices:
            ROUTER:
                -
          BGP Session from Border to Control Plane (BGP)
                -
          BGP Session from Border to Control Plane (PubSub)
                -
          BGP Session from Border to Peer Node for INFRA VN
                -
          BGP Session from Border to Peer Node
                -
          BGP Session from Border to Transit Control Plane
                -
          BGP Session to Spine
                -
          Cisco TrustSec environment data download status
                -
          CPU Utilization
                -
          Extended Node Connectivity
                -
          Fabric Control Plane Reachability
                -
          Fabric Multicast RP Reachability
                -
          Inter-device Link Availability
                -
          Internet Availability
                -
          Link Discard
                -
          Link Error
                -
          Link Utilization
                -
          LISP Session from Border to Transit Site Control Plane
                -
          LISP Session Status
                -
          Memory Utilization
                -
          Peer Status
                -
          Pub-Sub Session from Border to Transit Site Control Plane
                -
          Pub-Sub Session Status for INFRA VN
                -
          Pub-Sub Session Status
                -
          Remote Internet Availability
                -
          VNI Status
            SWITCH\_AND\_HUB:
                -
          AAA server reachability
                -
          BGP Session from Border to Control Plane (BGP)
                -
          BGP Session from Border to Control Plane (PubSub)
                -
          BGP Session from Border to Peer Node for INFRA VN
                -
          BGP Session from Border to Peer Node
                -
          BGP Session from Border to Transit Control Plane
                -
          BGP Session to Spine
                -
          Cisco TrustSec environment data download status
                -
          CPU Utilization
                -
          Extended Node Connectivity
                -
          Fabric Control Plane Reachability
                -
          Fabric Multicast RP Reachability
                -
          Inter-device Link Availability
                -
          Internet Availability
                -
          Link Discard
                -
          Link Error
                -
          LISP Session from Border to Transit Site Control Plane
                -
          LISP Session Status
                -
          Memory Utilization
                -
          Peer Status
                -
          Pub-Sub Session from Border to Transit Site Control Plane
                -
          Pub-Sub Session Status for INFRA VN
                -
          Pub-Sub Session Status
                -
          Remote Internet Availability
                -
          VNI Status
            WIRELESS\_CONTROLLER:
                -
          Fabric Control Plane Reachability
                -
          Free Mbuf
                -
          Free Timer
                -
          Link Error
                -
          LISP Session Status
                -
          Memory Utilization
                -
          Packet Pool
                -
          WQE Pool
            UNIFIED\_AP:
                -
          Air Quality 2.4 GHz
                -
          Air Quality 5 GHz
                -
          Air Quality 6 GHz
                -
          CPU Utilization
                -
          Interference 2.4 GHz
                -
          Interference 5 GHz
                -
          Interference 6 GHz
                -
          Link Error
                -
          Memory Utilization
                -
          Noise 2.4 GHz
                -
          Noise 5 GHz
                -
          Noise 6 GHz
                -
          RF Utilization 2.4 GHz
                -
          RF Utilization 5 GHz
                -
          RF Utilization 6 GHz
            WIRELESS\_CLIENT:
                -
          Connectivity RSSI
                -
          Connectivity SNR
            WIRED\_CLIENT:
                -
          Link Error
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score/synchronize_to_issue_threshold"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score/synchronize_to_issue_threshold:

      .. rst-class:: ansible-option-title

      **synchronize_to_issue_threshold**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score/synchronize_to_issue_threshold" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Boolean value indicating whether the threshold should synchronize with issue resolution thresholds.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/device_health_score/threshold_value"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config/device_health_score/threshold_value:

      .. rst-class:: ansible-option-title

      **threshold_value**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/device_health_score/threshold_value" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The threshold value that, when exceeded, will affect the health score.
          


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-config_verify:

      .. rst-class:: ansible-option-title

      **config_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Set to \`True\` to enable configuration verification on Cisco Catalyst Center after applying the playbook config. This will ensure that the system validates the configuration state after the change is applied.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the desired state for the configuration. If \`merged\`, the module will update the configuration modifying existing ones.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"merged"` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are devices.AssuranceSettings.get\_all\_health\_score\_definitions\_for\_given\_filters, devices.AssuranceSettings.update\_health\_score\_definitions
   - Paths used are post /dna/intent/api/v1/health\_scoreDefinitions/${id}, post /dna/intent/api/v1/health\_scoreDefinitions/bulkUpdate
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins instead embedded connection manager from Cisco Catalyst Center SDK

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - hosts: catalystcenter_servers
      vars_files:
        - credentials.yml
      gather_facts: false
      connection: local
      tasks:
        - name: Update Health score and threshold settings
          cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_log: true
            catalystcenter_log_level: debug
            catalystcenter_log_append: true
            state: merged
            config_verify: true
            config:
              - device_health_score:
                  - device_family: SWITCH_AND_HUB  # required field
                    kpi_name: CPU Utilization  # required field
                    include_for_overall_health: true  # required field
                    threshold_value: 90
                    synchronize_to_issue_threshold: false
    - hosts: catalystcenter_servers
      vars_files:
        - credentials.yml
      gather_facts: false
      connection: local
      tasks:
        - name: Update Health score and threshold settings
          cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_log: true
            catalystcenter_log_level: debug
            catalystcenter_log_append: true
            state: merged
            config_verify: true
            config:
              - device_health_score:
                  - device_family: ROUTER  # required field
                    kpi_name: Link Error  # required field
                    include_for_overall_health: true  # required field
                    threshold_value: 60
                    synchronize_to_issue_threshold: false
    - hosts: catalystcenter_servers
      vars_files:
        - credentials.yml
      gather_facts: false
      connection: local
      tasks:
        - name: Update Health score and threshold settings
          cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_log: true
            catalystcenter_log_level: debug
            catalystcenter_log_append: true
            state: merged
            config_verify: true
            config:
              - device_health_score:
                  - device_family: UNIFIED_AP  # required field
                    kpi_name: Interference 6 GHz  # required field
                    include_for_overall_health: true  # required field
                    threshold_value: 80
                    synchronize_to_issue_threshold: false




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_1"></div>

      .. _ansible_collections.cisco.catalystcenter.assurance_device_health_score_settings_workflow_manager_module__return-response_1:

      .. rst-class:: ansible-option-title

      **response_1**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_1" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"definitionStatus": "string", "description": "string", "deviceFamily": "string", "displayName": "string", "id": "string", "includeForOverallHealth": "boolean", "lastModified": "string", "name": "string", "synchronizeToIssueThreshold": "boolean", "thresholdValue": "number"}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Megha Kandari (@kandarimegha), Madhan Sankaranarayanan (@madhansansel)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

